--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -115,9 +115,9 @@
       <Project>{265FECA0-AFEA-4A46-984B-1078A1A1FA5C}</Project>
       <Name>Entity</Name>
     </ProjectReference>
-    <ProjectReference Include="..\IRepository.cs\IRepository.cs.csproj">
+    <ProjectReference Include="..\IRepository.cs\IRepository.csproj">
       <Project>{e5f63b41-8b4a-4b52-9754-9ced83cac45c}</Project>
-      <Name>IRepository.cs</Name>
+      <Name>IRepository</Name>
     </ProjectReference>
     <ProjectReference Include="..\IService\IService.csproj">
       <Project>{90290c05-04ab-42ef-8bb8-70e9a52aab16}</Project>
