--- a/WEB.API/WEB.API.csproj
+++ b/WEB.API/WEB.API.csproj
@@ -250,12 +250,13 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Filter\TokenFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201707211002057_CreateTable.cs" />
-    <Compile Include="Migrations\201707211002057_CreateTable.Designer.cs">
-      <DependentUpon>201707211002057_CreateTable.cs</DependentUpon>
+    <Compile Include="Migrations\201707240334488_CreateTable.cs" />
+    <Compile Include="Migrations\201707240334488_CreateTable.Designer.cs">
+      <DependentUpon>201707240334488_CreateTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -364,8 +365,8 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201707211002057_CreateTable.resx">
-      <DependentUpon>201707211002057_CreateTable.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201707240334488_CreateTable.resx">
+      <DependentUpon>201707240334488_CreateTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
