--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -71,6 +71,7 @@
     <Compile Include="EF\EFContext.cs" />
     <Compile Include="EF\UserInfo.cs" />
     <Compile Include="MongoDB\AggregateBase.cs" />
+    <Compile Include="MongoDB\ExceptionLog.cs" />
     <Compile Include="MongoDB\UserDetailEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
