--- a/IRepository/IRepository.csproj
+++ b/IRepository/IRepository.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\IUserRepository.cs" />
+    <Compile Include="MongoDB\ILogRepository.cs" />
     <Compile Include="MongoDB\IUserDetailRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Redis\IUserInfoRepository.cs" />
