--- a/ViewModel/ViewModel.csproj
+++ b/ViewModel/ViewModel.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="BaseInputModel.cs" />
     <Compile Include="BaseOutputModel.cs" />
+    <Compile Include="BaseRequestResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseData.cs" />
     <Compile Include="User\DTO_Input_Register.cs" />
